tests/sema/bad/17_map_impure.sg
fn imp(a:int) -> int { return a; }      // not pure
parallel map imp [1,2,3];               // error: requires pure function
